<resources>
    <string name="app_name">Bucharest Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find the way!</string>
    <string name="developed_by">Developed by Ioan Irimia!</string>
    <string name="searchTV">Search</string>
    <string name="restaurantsTV">Restaurants</string>
    <string name="hotelsTV">Hotels</string>
    <string name="airportsTV">Airports</string>
    <string name="shopsTV">Shops</string>
    <string name="featuredLocationTV">All featured Locations</string>
    <string name="featured_locations_descriptionTV">All the locations that are featured and have the top ratings in town</string>
    <string name="most_viewed_locationsTV">Most viewed locations</string>
    <string name="view_allTV">View all</string>
    <string name="categoriesTV">Categories</string>
    <string name="casa_poporului">Casa Poporului</string>
    <string name="casa_poporuluiTV">\"Casa Poporului\" with an arhitectural style of Socialist Realism</string>
    <string name="restaurant">Restaurants</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="all_categories">All categories</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="categories">Categories</string>
    <string name="restaurants">Restaurants</string>
    <string name="hotels">Hotels</string>
    <string name="airports">Airports</string>
    <string name="shops">Shops</string>
    <string name="museums">Museums</string>
    <string name="pointsof_interests">Points of interests</string>
    <string name="publicTransport">Public transport</string>
    <string name="pointTitle">Point Title</string>
    <string name="desctiption">Description</string>
    <string name="enterUser">Enter username</string>
    <string name="enterPass">Enter password</string>
    <string name="signUP">Sign up</string>
    <string name="id">User ID</string>
    <string name="pass">User password</string>
    <string name="pass1">Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
</resources>
