<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context=".LoginForm">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/casapoporuluiarhitecture"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:layout_margin="30dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_login_24dp"/>
        <EditText
            android:textColor="@color/white"
            android:hint="@string/enterUser"
            android:id="@+id/idET"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_password_24dp"/>
        <EditText
            android:textColor="@color/white"
            android:hint="@string/enterPass"
            android:id="@+id/passwordET"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/signINBTN"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"/>
        <Button
            android:onClick="signupActivity"
            android:id="@+id/signUPBTN"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/signUP"/>

        
    </LinearLayout>
        


</LinearLayout>