<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SignUp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:hint="@string/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:textSize="25dp"/>
        <EditText
            android:id="@+id/signUpIDTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:textSize="25dp"/>
        <EditText
            android:id="@+id/signUpUserNameTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:hint="@string/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:textSize="25dp"/>
        <EditText
            android:id="@+id/signUpPassTV"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/signUpBTN2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUP"/>


    </LinearLayout>

</RelativeLayout>