<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.Point_Activity_Description">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/pointThumbnail"
            android:layout_width="125dp"
            android:layout_height="170dp"
            android:background="#2d2d2d"
            android:scaleType="centerCrop"/>
         <TextView
             android:id="@+id/pointsTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/pointTitle"
             android:layout_marginTop="10dp"
             android:textSize="18sp"
             android:textStyle="bold"/>
         <TextView
             android:id="@+id/pointsCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/categories"
             android:padding="8dp"
             android:layout_marginTop="10dp"
             android:background="#edecec"/>
         <TextView
             android:id="@+id/pointsDescription"
             android:textSize="18sp"
             android:layout_marginTop="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/desctiption"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>






</LinearLayout>